--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,51 @@
 h1{
   text-align: center;
-  padding-bottom: 8%;
+  padding-bottom: 2%;
 }
 
+h2{
+  
+  text-align: center;
+  font-family: 'Petit Formal Script', cursive;
+  font-size: 18px !important; 
+}
+
+body{
+  background-color:  rgb(194, 229, 241);
+}
+
+
+img {
+  width: 25%;
+}
+
+@media only screen and (min-width: 700px) {
+img {
+  float: left;
+  padding-left: 8% ;
+}
+h2{
+  padding-left: -15%;
+  padding-right: 10%;
+  padding-top: 9%;
+}
+body{
+  background-color:  rgb(194, 229, 241);
+}
+
+}
+
+@media only screen and (max-width: 700px) {
+  img {
+    padding-left: 40%;
+  }
+  h2{
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 3%;
+  }
+  body{
+    background-color:  rgb(243, 248, 215);
+  }
+  
+  }
